去中心化阻碍解除，基础功能测试与修复
